# mote

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  VERIFY_ICONS.md  close-button.sh  create-vnc-passwd.py  deploy-pi.sh  desktop-icons  desktop-icons.c  desktop-icons.rs  docker-build.sh  docker-compose.rdp-test.yml  home-button.sh  sway-config-snippet  test-rdp-desktop-loads.sh  vnc-connect.sh
.cursor/rules/: mote-project.mdc
android-remote/: DIAGNOSE_INSTALL.md  README.md  build.gradle.kts  local.properties  settings.gradle.kts  sign-apk.sh
android-remote/app/: build.gradle.kts
android-remote/app/src/main/: AndroidManifest.xml
android-remote/app/src/main/java/com/mote/remote/: MainActivity.kt  ScreenCastService.kt  TouchInputService.kt
android-remote/app/src/main/res/layout/: activity_main.xml
android-remote/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android-remote/app/src/main/res/xml/: accessibility_config.xml
compositor/: .gitignore  Cargo.toml  README.md
compositor/src/: main.rs
