[package]
name = "mote-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay = { version = "0.3", features = ["wayland_frontend", "backend_drm", "backend_libinput", "backend_session_logind"] }
calloop = "0.12"
nix = "0.28"
log = "0.4"
env_logger = "0.11"
wayland-server = "0.31"
wayland-protocols = "0.31"
image = "0.24"
cairo-rs = "0.18"
pango = "0.18"
pangocairo = "0.18"


